--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="css/main.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-  <script src="viewport.js"></script>
+  <script src="viewport.min.js"></script>
   <script>
   	$(function() {
   		$('.viewport').viewPort({
