--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   			},
 
   			'horizon:reach' : function(ev, details) {
-  				if(ev.detail.scrollDirection > 0) {
+  				if(details.scrollDirection > 0) {
   					window.scrollTo(0, details.top - details.guideLine.offset);
           } else {
             window.scrollTo(0, details.bottom - details.guideLine.offset);
